# clangd_usecase

./: CMakeLists.txt
lib1/: foo.cpp
lib2/: foo.cpp
src/: app.cpp
